2002-11-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSRunLoop.m: Revert to remove unneeded notification setup.
	* Source/NSThread.m: Rewrite pierres changes, scrapping all
	conditionally compiled code that would never be used, rewriting
	unix specific stuff (so it might run under windoze ... not yet tested)
	removed unnecessary code and simplified, etc etc.
	Fixed bugs in usage of condition locks so it actually works.
	* Testing/thread.m: New test to try out
	performSelectorOnMainThread:withObject:waitUntilDone:modes:

2002-11-02  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/NSRunLoop.m ([NSRunLoop -init]): ask to be informed about
	NSWillBecomeMultiThreadedNotification if _willBecomeMultiThreaded:
	method existes.
	* Source/NSRunLoop.m: new GSAppKitInterThreadRunLoopWatcher private
	class.
	([NSRunLoop -_willBecomeMultiThreaded:]): new method, sets up the 
	lock, the socket and new run loop watcher that'll listen on the socket.
	[NSObject -performSelectorOnMainThread:withObject:waitUntilDone:modes:]):
	modified to use the previous changes.

2002-11-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/NSBundle.h: Tidied/corrected documentation
	markup.
	* Headers/gnustep/base/NSDate.h: Added NSTimeIntervalSince1970 and
	removed GSTimeNow() from public API.
	* Source/NSDate.m: Update to use NSTimeIntervalSince1970
	* Source/NSTimer.m: Declare GSTimeNow() locally
	* Source/NSprocessInfo.m: ditto
	* Source/Additions/GSMime.m: more tolerant parsing ... ignore excess
	data in multi-part document.
 
Thu Oct 31 00:46:23 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/gnustep/base/NSBundle.h: Added more documentation.

Wed Oct 30 23:42:50 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSBundle.m ([+_addFrameworkFromClass:]): New code
	locating linked frameworks magically - no matter where they are on
	disk - by using objc_get_symbol_path().  If that fails or is not