@@ -1,3 +1,8 @@
+2002-11-04  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSArray.m: Ensurd some documentation in place for almost all
+	methods.
+
 2002-11-03  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSRunLoop.m: Revert to remove unneeded notification setup.
